--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevLinks</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <p>@renipinto</p>
         </div>
 
-        <div id="switch">
+        <div id="switch" onclick="toggleMode()">
             <button></button>
             <span></span>
         </div>
