--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br">
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
                 <a href="#" target="_blank">Baixe meu e-book</a>
             </li>
             <li>
-                <a href="#" target="_blank">Veja meu portfólio</a>
+                <a href="https://github.com/renipinto" target="_blank">Veja meu portfólio</a>
             </li>
             <li>
                 <a href="#" target="_blank">Conheça o Explorer</a>
@@ -39,16 +39,16 @@
         </ul>
 
         <div id="social-links">
-            <a href="#" target="_blank">
+            <a href="https://github.com/renipinto" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://instagram.com/renipinto" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://youtube.com/c/renipinto" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/renipinto/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
